--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "3.0.0"
+    "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
+    "nuxt": "3.0.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
