--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "nuxt": "3.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "tsparticles": "^2.5.3",
+    "vue3-particles": "^2.5.3"
   }
 }
