--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@vueuse/core": "^9.5.0",
+    "@vueuse/nuxt": "^9.5.0",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
     "nuxt": "3.0.0",
