--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@vueuse/components": "^9.5.0",
     "tsparticles": "^2.5.3",
     "vue3-particles": "^2.5.3"
   }
