--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
     "nuxt": "3.0.0",
+    "nuxt-icon": "^0.1.7",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   },
