--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^8.0.0-beta.5",
     "@vueuse/components": "^9.5.0",
     "tsparticles": "^2.5.3",
     "vue3-particles": "^2.5.3"
