--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
     "nuxt": "3.0.0",
+    "nuxt-headlessui": "^1.0.4",
     "nuxt-icon": "^0.1.7",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
