--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -20,6 +20,9 @@ jobs:
           cache-dependency-path: "./package-lock.json"
       - run: npm install
       - run: npm run generate
+        env:   
+            NUXT_PUBLIC_TEST_VAR: ${{ secrets.NUXT_PUBLIC_TEST_VAR }}
+            
       - uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
