--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install
       - run: npm run generate
         env:   
-            NUXT_PUBLIC_TEST_VAR: ${{ secrets.NUXT_PUBLIC_TEST_VAR }}
+            NUXT_PUBLIC_TEST_VAR: teste
             
       - uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
