--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@nuxtjs/apollo": "^5.0.0-alpha.4",
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@vueuse/core": "^9.5.0",
     "@vueuse/nuxt": "^9.5.0",
