--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -22,6 +22,8 @@ jobs:
       - run: npm run generate
         env:   
             NUXT_PUBLIC_TEST_VAR: teste
+            NUXT_CONTENTFUL_SPACE: ${{ secrets.NUXT_CONTENTFUL_SPACE }}
+            NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN: ${{ secrets.NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN }}
             
       - uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
