--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.5",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vueuse/components": "^9.5.0",
     "tsparticles": "^2.5.3",
     "vue3-particles": "^2.5.3"
