--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   deploy:
     runs-on: ${{ matrix.os }}
+    environment: github-pages
 
     strategy:
       matrix:
@@ -21,7 +22,6 @@ jobs:
       - run: npm install
       - run: npm run generate
         env:   
-            NUXT_PUBLIC_TEST_VAR: teste
             NUXT_CONTENTFUL_SPACE: ${{ secrets.NUXT_CONTENTFUL_SPACE }}
             NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN: ${{ secrets.NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN }}
             
