--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.5",
+    "@sendgrid/mail": "^7.7.0",
+    "@types/node": "^18.15.11",
     "@vueuse/components": "^9.13.0",
     "tsparticles": "^2.9.3",
     "vue3-particles": "^2.9.3"
