--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -24,7 +24,7 @@ jobs:
         env:   
             NUXT_CONTENTFUL_SPACE: ${{ secrets.NUXT_CONTENTFUL_SPACE }}
             NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN: ${{ secrets.NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN }}
-            
+            NUXT_SENDGRID_API_KEY: ${{ secrets.NUXT_SENDGRID_API_KEY }}
       - uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
