--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -9,8 +9,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
-        node: [ 16 ]
+        os: [ubuntu-latest]
+        node: [16]
 
     steps:
       - uses: actions/checkout@v3
@@ -21,15 +21,15 @@ jobs:
           cache-dependency-path: "./package-lock.json"
       - run: npm install
       - run: npm run generate
-        env:   
-            NUXT_CONTENTFUL_SPACE: ${{ secrets.NUXT_CONTENTFUL_SPACE }}
-            NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN: ${{ secrets.NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN }}
-            NUXT_SENDGRID_API_KEY: ${{ secrets.NUXT_SENDGRID_API_KEY }}
+        env:
+          NUXT_CONTENTFUL_SPACE: ${{ secrets.NUXT_CONTENTFUL_SPACE }}
+          NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN: ${{ secrets.NUXT_CONTENTFUL_PUBLIC_ACCESS_TOKEN }}
+          NUXT_SENDGRID_API_KEY: ${{ secrets.NUXT_SENDGRID_API_KEY }}
       - uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: '.output/public'
+          FOLDER: ".output/public"
           CLEAN: true
-        env:   
-            NUXT_PUBLIC_TEST_VAR: ${{ secrets.NUXT_PUBLIC_TEST_VAR }}
+        env:
+          NUXT_PUBLIC_TEST_VAR: ${{ secrets.NUXT_PUBLIC_TEST_VAR }}
