--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "vue3snippets.enable-compile-vue-file-on-did-save-code": true,
-    "i18n-ally.localesPaths": [
-        "locales"
-    ]
+  "vue3snippets.enable-compile-vue-file-on-did-save-code": true,
+  "i18n-ally.localesPaths": ["locales"]
 }
