--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.5",
+    "@twicpics/components": "^0.16.1",
     "@types/node": "^18.15.11",
     "@vueuse/components": "^9.13.0",
     "tsparticles": "^2.9.3",
