--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
     "@nuxtjs/apollo": "^5.0.0-alpha.6",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/i18n": "^8.0.0-beta.13",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@vueuse/core": "^10.2.1",
-    "@vueuse/nuxt": "^10.2.1",
+    "@nuxtjs/i18n": "^8.0.0-rc.2",
+    "@typescript-eslint/parser": "^6.3.0",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/nuxt": "^10.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "gh-pages": "^5.0.0",
     "nuxt": "^3.6.5",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.4.2",
+    "nuxt-icon": "^0.5.0",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "@twicpics/components": "^0.21.1",
-    "@types/node": "^20.4.5",
-    "@vueuse/components": "^10.2.1",
-    "tsparticles": "^2.11.1",
-    "vue3-particles": "^2.11.1"
+    "@twicpics/components": "^0.22.0",
+    "@types/node": "^20.4.8",
+    "@vueuse/components": "^10.3.0",
+    "tsparticles": "^2.12.0",
+    "vue3-particles": "^2.12.0"
   }
 }
