--- a/package.json
+++ b/package.json
@@ -15,28 +15,30 @@
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.7",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/google-fonts": "^3.1.1",
     "@nuxtjs/i18n": "^8.0.0-rc.2",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@vueuse/core": "^10.6.1",
-    "@vueuse/nuxt": "^10.6.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "gh-pages": "^6.0.0",
-    "nuxt": "^3.8.1",
+    "gh-pages": "^6.1.0",
+    "nuxt": "^3.8.2",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.6.5",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5"
+    "nuxt-icon": "^0.6.7",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6"
   },
   "dependencies": {
-    "@twicpics/components": "^0.25.1",
-    "@types/node": "^20.9.0",
-    "@vueuse/components": "^10.6.1",
+    "@nuxt/content": "^2.9.0",
+    "@twicpics/components": "^0.26.0",
+    "@types/node": "^20.10.4",
+    "@vueuse/components": "^10.7.0",
     "tsparticles": "^2.12.0",
     "vue3-particles": "^2.12.0"
   }
