--- a/package.json
+++ b/package.json
@@ -13,33 +13,34 @@
     "lintfix": "npx prettier --write --list-different . && npm run lint:js --fix"
   },
   "devDependencies": {
-    "@nuxtjs/apollo": "^5.0.0-alpha.7",
+    "@nuxtjs/apollo": "^5.0.0-alpha.11",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/google-fonts": "^3.1.1",
-    "@nuxtjs/i18n": "^8.0.0-rc.2",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/i18n": "^8.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "@vueuse/core": "^10.7.0",
     "@vueuse/nuxt": "^10.7.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "gh-pages": "^6.1.0",
-    "nuxt": "^3.8.2",
-    "nuxt-headlessui": "^1.1.4",
+    "eslint-plugin-prettier": "^5.1.2",
+    "gh-pages": "^6.1.1",
+    "nuxt": "^3.9.0",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.7",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.4.0"
   },
   "dependencies": {
-    "@nuxt/content": "^2.9.0",
+    "@nuxt/content": "^2.10.0",
+    "@tsparticles/vue3": "^3.0.0",
     "@twicpics/components": "^0.26.0",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.10.5",
+    "@vue/apollo-composable": "^4.0.0-beta.12",
     "@vueuse/components": "^10.7.0",
-    "tsparticles": "^2.12.0",
-    "vue3-particles": "^2.12.0"
+    "tsparticles": "^3.0.2"
   }
 }
