--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lintfix": "npx prettier --write --list-different . && npm run lint:js --fix"
   },
   "devDependencies": {
-    "@nuxtjs/apollo": "^5.0.0-alpha.11",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@nuxtjs/i18n": "^8.0.0",
@@ -39,8 +38,8 @@
     "@tsparticles/vue3": "^3.0.0",
     "@twicpics/components": "^0.26.0",
     "@types/node": "^20.11.0",
-    "@vue/apollo-composable": "^4.0.0-beta.12",
     "@vueuse/components": "^10.7.1",
+    "nuxt-graphql-client": "^0.2.33",
     "tsparticles": "^3.0.3"
   }
 }
