--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "@nuxt/content": "^2.10.0",
     "@tsparticles/vue3": "^3.0.0",
     "@twicpics/components": "^0.26.0",
     "@types/node": "^20.11.0",
     "@vueuse/components": "^10.7.1",
+    "marked": "^12.0.0",
     "nuxt-graphql-client": "^0.2.33",
     "tsparticles": "^3.0.3"
   }
