--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@tsparticles/slim": "^3.3.0",
     "@tsparticles/vue3": "^3.0.0",
     "@twicpics/components": "^0.27.2",
     "@types/node": "^20.11.21",
